--- a/style.css
+++ b/style.css
@@ -1,7 +1,67 @@
+html,
+body{
+    height: 100%;
+}
 body,
-input{
+input {
     font-family: 'Montserrat';
 }
-body{
-    padding-top: 60px;
+body {
+    padding-top: 50px;
+}
+#intro {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+    z-index: 1;
+}
+#intro::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 2;
+}
+#intro img{
+    display: block;
+    position: absolute;
+    transform: translateX(-50p);
+    width: 100%;
+}
+#intro .content{
+    text-align: center;
+    position: absolute;
+    overflow: hidden;
+    
+    z-index: 5;
+    color: white;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+#intro .content h1{
+    margin: 25px;
+    font-size: 4.5em;
+    font-weight: 300;
+}
+#intro .content h2{
+    padding: 10px 0 0;
+    border: none;
+}
+#intro .content h3{
+    font-size: 1.5em;
+    font-weight: 300;
+}
+section{
+    margin-bottom: 25px;
+}
+section h2{
+    text-align: center;
+    line-height: 1;
+    padding-bottom: 10px;
+    border-bottom: 2px solid black;
 }
