--- a/style.css
+++ b/style.css
@@ -2,13 +2,7 @@ html,
 body{
     height: 100%;
 }
-body {
-    background-image: url('https://i.imgur.com/COtSoAk.jpg');
-    background-repeat: no-repeat;
-    background-attachment: local;
-    background-position: center;
-    background-size: cover;
-  }
+
 
 body,
 input {
@@ -23,6 +17,12 @@ body {
     height: 100%;
     overflow: hidden;
     z-index: 1;
+
+    background-image: url('https://i.imgur.com/COtSoAk.jpg');
+    background-repeat: no-repeat;
+    background-attachment: local;
+    background-position: center;
+    background-size: cover;
 }
 #intro::after{
     content: "";
@@ -35,13 +35,6 @@ body {
     z-index: 2;
 }
 
-
-#intro img{
-    display: block;
-    position: absolute;
-    transform: translateX(-50p);
-    width: 100%;
-}
 #intro .content{
     text-align: center;
     position: absolute;
@@ -67,6 +60,31 @@ body {
     font-size: 1.5em;
     font-weight: 300;
 }
+
+.typist-blink {
+    font-weight: 800
+}
+.typist-blink:after {
+    position: relative;
+    top: 6px;
+    display: inline-block;
+    height: 30px;
+    margin-right: 7px;
+    margin-left: 3px;
+    content: ' ';
+    -webkit-animation: blink 1s step-start 0s infinite;
+    animation: blink 1s step-start 0s infinite;
+    border-right: 2px solid
+}
+.typist-blink>.selectedText {
+    display: none
+}
+.typist-mark>.selectedText {
+    font-style: normal;
+    color: #fff;
+    background-color: #222
+}
+
 #intro .content .socials{
     padding: 15px;
 }
