--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 html,
 body{
     height: 100%;
-    
+    background-image: url('https://images.pexels.com/photos/3933508/pexels-photo-3933508.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-size: cover;
+   max-width:100%;
 }
 
 
@@ -18,12 +22,13 @@ body {
     height: 100%;
     overflow: hidden;
     z-index: 1;
-
+    
     background-image: url('https://i.imgur.com/COtSoAk.jpg');
     background-repeat: no-repeat;
     background-attachment: local;
     background-position: center;
     background-size: cover;
+    border-radius: 1500px;
 }
 #intro::after{
     content: "";
@@ -98,3 +103,85 @@ section h2{
     padding-bottom: 10px;
     border-bottom: 2px solid black;
 }
+.card {
+    background-color: #ffffe6;
+    padding: 20px;
+    margin: 70px 70px 70px 70px;
+    border-radius: 15px;
+    }
+
+.center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
+
+
+.go-down {
+    text-align: center;
+    position: absolute;
+    z-index: 10;
+    bottom: 25px;
+    left: 0;
+    right: 0;
+  }
+  .go-down .mouse {
+    display: inline-block;
+    width: 30px;
+    height: 50px;
+    border: 2px solid #fff;
+    border-radius: 15px;
+  }
+  .go-down .mouse::after {
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 100%;
+    width: 1px;
+    height: 1px;
+    border: 4px solid #fff;
+    left: 50%;
+    margin-left: -4px;
+    top: 10px;
+  }
+  
+
+
+  .slide-container {
+    text-align: center;
+    margin: 15px;
+  }
+  .slide-container .slides {
+    display: inline-block;
+    border: 1px solid #ccc;
+    overflow: hidden;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  .slide-container .slides img {
+    display: block;
+    border-radius: 5px;
+    max-width: 100%;
+  }
+  .slide-container .slides .hidden {
+    display: none;
+  }
+  .slide-container .pager {
+    text-align: center;
+    display: block;
+    padding: 10px;
+  }
+  .slide-container .pager li {
+    margin: 15px 5px;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #ccc;
+    border-radius: 100%;
+    padding: 5px;
+    transition: all 0.5s linear;
+  }
+  .slide-container .pager li.active {
+    background-color: #000;
+  }
